--- a/squidalytics/static/css/main.css
+++ b/squidalytics/static/css/main.css
@@ -860,12 +860,12 @@ a.box:active {
   color: #fff;
 }
 .button.is-primary {
-  background-color: hsl(171, 100%, 41%);
+  background-color: #ad5ad7;
   border-color: transparent;
   color: #fff;
 }
 .button.is-primary:hover, .button.is-primary.is-hovered {
-  background-color: #00c4a7;
+  background-color: #a850d5;
   border-color: transparent;
   color: #fff;
 }
@@ -874,21 +874,21 @@ a.box:active {
   color: #fff;
 }
 .button.is-primary:focus:not(:active), .button.is-primary.is-focused:not(:active) {
-  box-shadow: 0 0 0 0.125em rgba(0, 209, 178, 0.25);
+  box-shadow: 0 0 0 0.125em rgba(173, 90, 215, 0.25);
 }
 .button.is-primary:active, .button.is-primary.is-active {
-  background-color: #00b89c;
+  background-color: #a345d2;
   border-color: transparent;
   color: #fff;
 }
 .button.is-primary[disabled], fieldset[disabled] .button.is-primary {
-  background-color: hsl(171, 100%, 41%);
-  border-color: hsl(171, 100%, 41%);
+  background-color: #ad5ad7;
+  border-color: #ad5ad7;
   box-shadow: none;
 }
 .button.is-primary.is-inverted {
   background-color: #fff;
-  color: hsl(171, 100%, 41%);
+  color: #ad5ad7;
 }
 .button.is-primary.is-inverted:hover, .button.is-primary.is-inverted.is-hovered {
   background-color: #f2f2f2;
@@ -897,32 +897,32 @@ a.box:active {
   background-color: #fff;
   border-color: transparent;
   box-shadow: none;
-  color: hsl(171, 100%, 41%);
+  color: #ad5ad7;
 }
 .button.is-primary.is-loading::after {
   border-color: transparent transparent #fff #fff !important;
 }
 .button.is-primary.is-outlined {
   background-color: transparent;
-  border-color: hsl(171, 100%, 41%);
-  color: hsl(171, 100%, 41%);
+  border-color: #ad5ad7;
+  color: #ad5ad7;
 }
 .button.is-primary.is-outlined:hover, .button.is-primary.is-outlined.is-hovered, .button.is-primary.is-outlined:focus, .button.is-primary.is-outlined.is-focused {
-  background-color: hsl(171, 100%, 41%);
-  border-color: hsl(171, 100%, 41%);
+  background-color: #ad5ad7;
+  border-color: #ad5ad7;
   color: #fff;
 }
 .button.is-primary.is-outlined.is-loading::after {
-  border-color: transparent transparent hsl(171, 100%, 41%) hsl(171, 100%, 41%) !important;
+  border-color: transparent transparent #ad5ad7 #ad5ad7 !important;
 }
 .button.is-primary.is-outlined.is-loading:hover::after, .button.is-primary.is-outlined.is-loading.is-hovered::after, .button.is-primary.is-outlined.is-loading:focus::after, .button.is-primary.is-outlined.is-loading.is-focused::after {
   border-color: transparent transparent #fff #fff !important;
 }
 .button.is-primary.is-outlined[disabled], fieldset[disabled] .button.is-primary.is-outlined {
   background-color: transparent;
-  border-color: hsl(171, 100%, 41%);
+  border-color: #ad5ad7;
   box-shadow: none;
-  color: hsl(171, 100%, 41%);
+  color: #ad5ad7;
 }
 .button.is-primary.is-inverted.is-outlined {
   background-color: transparent;
@@ -931,10 +931,10 @@ a.box:active {
 }
 .button.is-primary.is-inverted.is-outlined:hover, .button.is-primary.is-inverted.is-outlined.is-hovered, .button.is-primary.is-inverted.is-outlined:focus, .button.is-primary.is-inverted.is-outlined.is-focused {
   background-color: #fff;
-  color: hsl(171, 100%, 41%);
+  color: #ad5ad7;
 }
 .button.is-primary.is-inverted.is-outlined.is-loading:hover::after, .button.is-primary.is-inverted.is-outlined.is-loading.is-hovered::after, .button.is-primary.is-inverted.is-outlined.is-loading:focus::after, .button.is-primary.is-inverted.is-outlined.is-loading.is-focused::after {
-  border-color: transparent transparent hsl(171, 100%, 41%) hsl(171, 100%, 41%) !important;
+  border-color: transparent transparent #ad5ad7 #ad5ad7 !important;
 }
 .button.is-primary.is-inverted.is-outlined[disabled], fieldset[disabled] .button.is-primary.is-inverted.is-outlined {
   background-color: transparent;
@@ -943,18 +943,18 @@ a.box:active {
   color: #fff;
 }
 .button.is-primary.is-light {
-  background-color: #ebfffc;
-  color: #00947e;
+  background-color: #f7effb;
+  color: #842bb1;
 }
 .button.is-primary.is-light:hover, .button.is-primary.is-light.is-hovered {
-  background-color: #defffa;
+  background-color: #f2e4f9;
   border-color: transparent;
-  color: #00947e;
+  color: #842bb1;
 }
 .button.is-primary.is-light:active, .button.is-primary.is-light.is-active {
-  background-color: #d1fff8;
+  background-color: #eddaf6;
   border-color: transparent;
-  color: #00947e;
+  color: #842bb1;
 }
 .button.is-link {
   background-color: hsl(229, 53%, 53%);
@@ -1995,12 +1995,12 @@ div.icon-text {
   color: #fff;
 }
 .notification.is-primary {
-  background-color: hsl(171, 100%, 41%);
+  background-color: #ad5ad7;
   color: #fff;
 }
 .notification.is-primary.is-light {
-  background-color: #ebfffc;
-  color: #00947e;
+  background-color: #f7effb;
+  color: #842bb1;
 }
 .notification.is-link {
   background-color: hsl(229, 53%, 53%);
@@ -2116,16 +2116,16 @@ div.icon-text {
   background-image: linear-gradient(to right, hsl(0, 0%, 21%) 30%, hsl(0, 0%, 93%) 30%);
 }
 .progress.is-primary::-webkit-progress-value {
-  background-color: hsl(171, 100%, 41%);
+  background-color: #ad5ad7;
 }
 .progress.is-primary::-moz-progress-bar {
-  background-color: hsl(171, 100%, 41%);
+  background-color: #ad5ad7;
 }
 .progress.is-primary::-ms-fill {
-  background-color: hsl(171, 100%, 41%);
+  background-color: #ad5ad7;
 }
 .progress.is-primary:indeterminate {
-  background-image: linear-gradient(to right, hsl(171, 100%, 41%) 30%, hsl(0, 0%, 93%) 30%);
+  background-image: linear-gradient(to right, #ad5ad7 30%, hsl(0, 0%, 93%) 30%);
 }
 .progress.is-link::-webkit-progress-value {
   background-color: hsl(229, 53%, 53%);
@@ -2262,8 +2262,8 @@ div.icon-text {
 }
 .table td.is-primary,
 .table th.is-primary {
-  background-color: hsl(171, 100%, 41%);
-  border-color: hsl(171, 100%, 41%);
+  background-color: #ad5ad7;
+  border-color: #ad5ad7;
   color: #fff;
 }
 .table td.is-link,
@@ -2481,12 +2481,12 @@ div.icon-text {
   color: #fff;
 }
 .tag:not(body).is-primary {
-  background-color: hsl(171, 100%, 41%);
+  background-color: #ad5ad7;
   color: #fff;
 }
 .tag:not(body).is-primary.is-light {
-  background-color: #ebfffc;
-  color: #00947e;
+  background-color: #f7effb;
+  color: #842bb1;
 }
 .tag:not(body).is-link {
   background-color: hsl(229, 53%, 53%);
@@ -2781,10 +2781,10 @@ a.tag:hover {
   box-shadow: 0 0 0 0.125em rgba(54, 54, 54, 0.25);
 }
 .is-primary.textarea, .is-primary.input {
-  border-color: hsl(171, 100%, 41%);
+  border-color: #ad5ad7;
 }
 .is-primary.textarea:focus, .is-primary.input:focus, .is-primary.is-focused.textarea, .is-primary.is-focused.input, .is-primary.textarea:active, .is-primary.input:active, .is-primary.is-active.textarea, .is-primary.is-active.input {
-  box-shadow: 0 0 0 0.125em rgba(0, 209, 178, 0.25);
+  box-shadow: 0 0 0 0.125em rgba(173, 90, 215, 0.25);
 }
 .is-link.textarea, .is-link.input {
   border-color: hsl(229, 53%, 53%);
@@ -2982,16 +2982,16 @@ a.tag:hover {
   box-shadow: 0 0 0 0.125em rgba(54, 54, 54, 0.25);
 }
 .select.is-primary:not(:hover)::after {
-  border-color: hsl(171, 100%, 41%);
+  border-color: #ad5ad7;
 }
 .select.is-primary select {
-  border-color: hsl(171, 100%, 41%);
+  border-color: #ad5ad7;
 }
 .select.is-primary select:hover, .select.is-primary select.is-hovered {
-  border-color: #00b89c;
+  border-color: #a345d2;
 }
 .select.is-primary select:focus, .select.is-primary select.is-focused, .select.is-primary select:active, .select.is-primary select.is-active {
-  box-shadow: 0 0 0 0.125em rgba(0, 209, 178, 0.25);
+  box-shadow: 0 0 0 0.125em rgba(173, 90, 215, 0.25);
 }
 .select.is-link:not(:hover)::after {
   border-color: hsl(229, 53%, 53%);
@@ -3177,22 +3177,22 @@ a.tag:hover {
   color: #fff;
 }
 .file.is-primary .file-cta {
-  background-color: hsl(171, 100%, 41%);
+  background-color: #ad5ad7;
   border-color: transparent;
   color: #fff;
 }
 .file.is-primary:hover .file-cta, .file.is-primary.is-hovered .file-cta {
-  background-color: #00c4a7;
+  background-color: #a850d5;
   border-color: transparent;
   color: #fff;
 }
 .file.is-primary:focus .file-cta, .file.is-primary.is-focused .file-cta {
   border-color: transparent;
-  box-shadow: 0 0 0.5em rgba(0, 209, 178, 0.25);
+  box-shadow: 0 0 0.5em rgba(173, 90, 215, 0.25);
   color: #fff;
 }
 .file.is-primary:active .file-cta, .file.is-primary.is-active .file-cta {
-  background-color: #00b89c;
+  background-color: #a345d2;
   border-color: transparent;
   color: #fff;
 }
@@ -3492,7 +3492,7 @@ a.tag:hover {
   color: hsl(0, 0%, 21%);
 }
 .help.is-primary {
-  color: hsl(171, 100%, 41%);
+  color: #ad5ad7;
 }
 .help.is-link {
   color: hsl(229, 53%, 53%);
@@ -4253,15 +4253,15 @@ button.dropdown-item.is-active {
   border-color: hsl(0, 0%, 21%);
 }
 .message.is-primary {
-  background-color: #ebfffc;
+  background-color: #f7effb;
 }
 .message.is-primary .message-header {
-  background-color: hsl(171, 100%, 41%);
+  background-color: #ad5ad7;
   color: #fff;
 }
 .message.is-primary .message-body {
-  border-color: hsl(171, 100%, 41%);
-  color: #00947e;
+  border-color: #ad5ad7;
+  color: #842bb1;
 }
 .message.is-link {
   background-color: #eff1fa;
@@ -4683,7 +4683,7 @@ button.dropdown-item.is-active {
   }
 }
 .navbar.is-primary {
-  background-color: hsl(171, 100%, 41%);
+  background-color: #ad5ad7;
   color: #fff;
 }
 .navbar.is-primary .navbar-brand > .navbar-item,
@@ -4694,7 +4694,7 @@ button.dropdown-item.is-active {
 .navbar.is-primary .navbar-brand .navbar-link:focus,
 .navbar.is-primary .navbar-brand .navbar-link:hover,
 .navbar.is-primary .navbar-brand .navbar-link.is-active {
-  background-color: #00b89c;
+  background-color: #a345d2;
   color: #fff;
 }
 .navbar.is-primary .navbar-brand .navbar-link::after {
@@ -4720,7 +4720,7 @@ button.dropdown-item.is-active {
   .navbar.is-primary .navbar-end .navbar-link:focus,
   .navbar.is-primary .navbar-end .navbar-link:hover,
   .navbar.is-primary .navbar-end .navbar-link.is-active {
-    background-color: #00b89c;
+    background-color: #a345d2;
     color: #fff;
   }
   .navbar.is-primary .navbar-start .navbar-link::after,
@@ -4730,11 +4730,11 @@ button.dropdown-item.is-active {
   .navbar.is-primary .navbar-item.has-dropdown:focus .navbar-link,
   .navbar.is-primary .navbar-item.has-dropdown:hover .navbar-link,
   .navbar.is-primary .navbar-item.has-dropdown.is-active .navbar-link {
-    background-color: #00b89c;
+    background-color: #a345d2;
     color: #fff;
   }
   .navbar.is-primary .navbar-dropdown a.navbar-item.is-active {
-    background-color: hsl(171, 100%, 41%);
+    background-color: #ad5ad7;
     color: #fff;
   }
 }
@@ -5659,14 +5659,14 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
   color: hsl(0, 0%, 21%);
 }
 .panel.is-primary .panel-heading {
-  background-color: hsl(171, 100%, 41%);
+  background-color: #ad5ad7;
   color: #fff;
 }
 .panel.is-primary .panel-tabs a.is-active {
-  border-bottom-color: hsl(171, 100%, 41%);
+  border-bottom-color: #ad5ad7;
 }
 .panel.is-primary .panel-block.is-active .panel-icon {
-  color: hsl(171, 100%, 41%);
+  color: #ad5ad7;
 }
 .panel.is-link .panel-heading {
   background-color: hsl(229, 53%, 53%);
@@ -7730,39 +7730,39 @@ a.has-text-dark:hover, a.has-text-dark:focus {
 }
 
 .has-text-primary {
-  color: hsl(171, 100%, 41%) !important;
+  color: #ad5ad7 !important;
 }
 
 a.has-text-primary:hover, a.has-text-primary:focus {
-  color: #009e86 !important;
+  color: #9832cc !important;
 }
 
 .has-background-primary {
-  background-color: hsl(171, 100%, 41%) !important;
+  background-color: #ad5ad7 !important;
 }
 
 .has-text-primary-light {
-  color: #ebfffc !important;
+  color: #f7effb !important;
 }
 
 a.has-text-primary-light:hover, a.has-text-primary-light:focus {
-  color: #b8fff4 !important;
+  color: #e2c6f1 !important;
 }
 
 .has-background-primary-light {
-  background-color: #ebfffc !important;
+  background-color: #f7effb !important;
 }
 
 .has-text-primary-dark {
-  color: #00947e !important;
+  color: #842bb1 !important;
 }
 
 a.has-text-primary-dark:hover, a.has-text-primary-dark:focus {
-  color: #00c7a9 !important;
+  color: #9f3ed0 !important;
 }
 
 .has-background-primary-dark {
-  background-color: #00947e !important;
+  background-color: #842bb1 !important;
 }
 
 .has-text-link {
@@ -9798,7 +9798,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   }
 }
 .hero.is-primary {
-  background-color: hsl(171, 100%, 41%);
+  background-color: #ad5ad7;
   color: #fff;
 }
 .hero.is-primary a:not(.button):not(.dropdown-item):not(.tag):not(.pagination-link.is-current),
@@ -9817,7 +9817,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 }
 @media screen and (max-width: 1023px) {
   .hero.is-primary .navbar-menu {
-    background-color: hsl(171, 100%, 41%);
+    background-color: #ad5ad7;
   }
 }
 .hero.is-primary .navbar-item,
@@ -9827,7 +9827,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 .hero.is-primary a.navbar-item:hover, .hero.is-primary a.navbar-item.is-active,
 .hero.is-primary .navbar-link:hover,
 .hero.is-primary .navbar-link.is-active {
-  background-color: #00b89c;
+  background-color: #a345d2;
   color: #fff;
 }
 .hero.is-primary .tabs a {
@@ -9838,7 +9838,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   opacity: 1;
 }
 .hero.is-primary .tabs li.is-active a {
-  color: hsl(171, 100%, 41%) !important;
+  color: #ad5ad7 !important;
   opacity: 1;
 }
 .hero.is-primary .tabs.is-boxed a, .hero.is-primary .tabs.is-toggle a {
@@ -9850,14 +9850,14 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 .hero.is-primary .tabs.is-boxed li.is-active a, .hero.is-primary .tabs.is-boxed li.is-active a:hover, .hero.is-primary .tabs.is-toggle li.is-active a, .hero.is-primary .tabs.is-toggle li.is-active a:hover {
   background-color: #fff;
   border-color: #fff;
-  color: hsl(171, 100%, 41%);
+  color: #ad5ad7;
 }
 .hero.is-primary.is-bold {
-  background-image: linear-gradient(141deg, #009e6c 0%, hsl(171, 100%, 41%) 71%, #00e7eb 100%);
+  background-image: linear-gradient(141deg, #7f25d9 0%, #ad5ad7 71%, #cc6ae0 100%);
 }
 @media screen and (max-width: 768px) {
   .hero.is-primary.is-bold .navbar-menu {
-    background-image: linear-gradient(141deg, #009e6c 0%, hsl(171, 100%, 41%) 71%, #00e7eb 100%);
+    background-image: linear-gradient(141deg, #7f25d9 0%, #ad5ad7 71%, #cc6ae0 100%);
   }
 }
 .hero.is-link {
